--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,6 +1,6 @@
 <body>
     <h3>Sign In</h3>
-    <form action="/admin" method="post">
+        <form action="/" method="post">
         <label for="username"><b>Username</b></label>
         <input type="text" placeholder="Enter username" name="username" id="username">
 
