--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,36 @@
-<div class="author">
+<!-- index.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= locals.title %></title>
+  <meta name="description" content="<%= locals.description %>">
+</head>
+<body>
+  <div class="author">
     <h1 class="author__heading"> Hi , I am Abdalla Hassan</h1>
     <p class="author__body">Backend Developer</p>
-</div>
-<img src="/images/new2.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
+  </div>
+  <img src="/images/new2.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
 
+  <section>
+    <h2 class="articles__heading">Latest articles</h2>
 
+    <ul class="article-ul">
+      <% data.forEach(post => { %>
+        <li>
+          <a href="/post/<%= post._id %>">
+            <span><%= post.title %></span>
+            <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+          </a>
+        </li>
+      <% }) %>
+    </ul>
 
-<section>
-  <h2 class="articles__heading">Latest articles</h2>
-
-  <ul class="article-ul">
-    <% data.forEach(post => { %>
-      <li>
-        <a href="/post/<%= post._id %>">
-          <span><%= post.title %></span>
-          <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
-        </a> 
-      </li>
-    <% }) %>
-  </ul>
-
-  <% if (nextPage !== null) { %>
-      <a href="/?page=<%= nextPage %>" class="pagination"> &lt; View Older Posts</a>
-  <% } %>
-</section>
+    <% if (nextPage !== null) { %>
+        <a href="/home?page=<%=nextPage%>"class="pagination"> &lt; View Older Posts</a>
+    <% } %>
+  </section>
+</body>
+</html>
