--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <header class="header">
-     <a href="/" class="header__logo">NodeJs</a>
+     <a href="/home" class="header__logo">NodeJs</a>
 
      <nav class="header__nav">
         <ul>
             <li>
-                <a href="/" class="<%= isActiveRoute('/', currentRoute)%>">Home</a>
+                <a href="/home" class="<%= isActiveRoute('/home', currentRoute)%>">Home</a>
             </li>
             <li>
                 <a href="/about" class="<%= isActiveRoute('/about', currentRoute)%>">About</a>
