--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -6,7 +6,7 @@
    
     <% data.forEach(post => { %>
         <li>
-         <a href="/post/<%= post._id %> ">
+         <a href="home/post/<%= post._id %> ">
             <%= post.title %> &nearr;
         </a>
 
