--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -38,13 +38,8 @@
 
 
         <% if (typeof nextPage!=='undefined' && nextPage !==null) { %>
-            <a href="/home/?page=<%=nextPage%>" class="pagination">&lt; View Older Posts</a>
+            <a href="/?page=<%=nextPage%>" class="pagination">&lt; View Older Posts</a>
             <% } %>
-
-
-
-
-
 
     </section>
 </body>
