--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,6 +1,6 @@
 <div class="searchBar">
     <div class="container">
-      <form action="/search" method="POST" class="search__form" role="search">
+      <form action="/home/search" method="POST" class="search__form" role="search">
         <input 
           type="search"
           aria-label="Search"
