--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,10 @@
                 <a href="/home" class="<%= isActiveRoute('/home', currentRoute)%>">Home</a>
             </li>
             <li>
-                <a href="/about" class="<%= isActiveRoute('/about', currentRoute)%>">About</a>
+                <a href="/home/about" class="<%= isActiveRoute('/about', currentRoute)%>">About</a>
             </li>
             <li>
-                <a href="/contact" class="<%= isActiveRoute('/contact', currentRoute)%>">contact</a>
+                <a href="/home/contact" class="<%= isActiveRoute('/contact', currentRoute)%>">contact</a>
             </li>
         </ul>
      </nav>
